# Real-Time-Stock-Analytics-Pipeline

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  INSTRUCTIONS.md  INSTRUCTIONS.txt  Makefile  README.md  airflow-init-logs.txt  docker-compose.yml
.claude/: settings.local.json
airflow/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
airflow/dags/: dbt_transform_dag.py  stock_pipeline_dag.py
dbt/: .dockerignore  Dockerfile  dbt_project.yml  entrypoint.sh  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts.yml  dim_companies.sql  dim_date.sql  fct_stock_ohlcv_hourly.sql  fct_stock_trades.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_company_profiles.sql  stg_stock_trades.sql
dbt/seeds/: stock_symbols.csv
dbt/tests/: assert_positive_volume.sql
kafka/consumer/: Dockerfile  config.py  pyproject.toml  requirements.txt  s3_consumer.py
kafka/producer/: Dockerfile  config.py  finnhub_producer.py  pyproject.toml  requirements.txt
report/: real_time_stock_dashboard.pbip
report/real_time_stock_dashboard.Report/: .platform  definition.pbir
report/real_time_stock_dashboard.Report/.pbi/: localSettings.json
report/real_time_stock_dashboard.Report/StaticResources/RegisteredResources/: Custom10206721043226241.json
report/real_time_stock_dashboard.Report/definition/: report.json
report/real_time_stock_dashboard.Report/definition/pages/: pages.json
report/real_time_stock_dashboard.Report/definition/pages/04ce73cf08098b030a00/: page.json
report/real_time_stock_dashboard.Report/definition/pages/04ce73cf08098b030a00/visuals/24fe981ce570580ecb1d/: visual.json
report/real_time_stock_dashboard.Report/definition/pages/04ce73cf08098b030a00/visuals/319e2faa0b6731d5146d/: visual.json
report/real_time_stock_dashboard.Report/definition/pages/04ce73cf08098b030a00/visuals/b91610b5697202bcb707/: visual.json
report/real_time_stock_dashboard.Report/definition/pages/04ce73cf08098b030a00/visuals/d8c6ba12dc4998901e08/: visual.json
report/real_time_stock_dashboard.Report/definition/pages/0b5fb5608066c4b401b5/: page.json
report/real_time_stock_dashboard.Report/definition/pages/0b5fb5608066c4b401b5/visuals/36e2432301eb54b8072c/: visual.json
report/real_time_stock_dashboard.Report/definition/pages/0b5fb5608066c4b401b5/visuals/47deaf5046de63710496/: visual.json
report/real_time_stock_dashboard.Report/definition/pages/581f047abfb79fc06e22/: page.json
report/real_time_stock_dashboard.Report/definition/pages/60c6310bcbddd2de739d/: page.json
report/real_time_stock_dashboard.Report/definition/pages/a4227a8fb58790a0697a/: page.json
report/real_time_stock_dashboard.Report/definition/pages/d0b4970037b2339b96c0/: page.json
report/real_time_stock_dashboard.SemanticModel/: .platform  diagramLayout.json
report/real_time_stock_dashboard.SemanticModel/.pbi/: localSettings.json
report/real_time_stock_dashboard.SemanticModel/TMDLScripts/: Backup.tmdl
report/real_time_stock_dashboard.SemanticModel/TMDLScripts/.pbi/: tmdlScripts.json
report/real_time_stock_dashboard.SemanticModel/definition/: model.tmdl  relationships.tmdl
report/real_time_stock_dashboard.SemanticModel/definition/cultures/: en-US.tmdl
report/real_time_stock_dashboard.SemanticModel/definition/tables/: DIM_COMPANIES.tmdl  Disconnected Date.tmdl  FCT_STOCK_OHLCV_HOURLY.tmdl  FCT_STOCK_TRADES.tmdl  Metrics.tmdl  Period Filter.tmdl  dim_date.tmdl
scripts/: backfill_historical.py  init.sh  pyproject.toml  start.sh  stop.sh
snowflake/queries/: monitoring_queries.sql
snowflake/setup/: 01_roles_and_users.sql  02_warehouse.sql  03_database_schemas.sql  04_raw_tables.sql  05_s3_integration.sql  06_stage_and_pipe.sql  07_grants.sql
streamlit/: .dockerignore  Dockerfile  app.py  config.py  pyproject.toml
(+26 files in other folders)
