[project]
name = "airflow-stock-plugins"
version = "0.1.0"
description = "Airflow providers and DAGs for the stock analytics pipeline"
requires-python = ">=3.11"

# Production deps: additional providers only.
# apache-airflow itself is pre-installed in the Docker base image.
# Installed in Docker with Airflow's constraints file (see Dockerfile).
dependencies = [
    "apache-airflow-providers-amazon>=8.0.0",
    "apache-airflow-providers-snowflake>=5.0.0",
]

[dependency-groups]
# Install this group locally for IDE support (IntelliSense, linting).
# NOT installed inside Docker — Airflow is already in the base image.
dev = [
    "apache-airflow==2.10.4",
]

[tool.uv]
package = false

[tool.setuptools]
# No packages to discover - this project only declares dependencies
packages = []
