[project]
name = "stock-analytics-scripts"
version = "0.1.0"
description = "Utility scripts for Stock Analytics Pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yfinance>=0.2.36",
    "snowflake-connector-python[pandas]>=3.6.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false          # no installable package, just scripts
