[project]
name = "s3-consumer"
version = "0.1.0"
description = "Kafka → S3 micro-batch NDJSON consumer"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.4.0",
    "boto3==1.34.101",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false          # no installable package, just scripts
