[project]
name = "finnhub-producer"
version = "0.1.0"
description = "Finnhub WebSocket → Kafka real-time trade producer"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.4.0",
    "websocket-client==1.8.0",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false          # no installable package, just scripts
