[project]
name = "finnhub-producer"
version = "0.1.0"
description = "Finnhub dual-mode producer: WebSocket (real-time) or REST API (polling)"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka==2.4.0",
    "websocket-client==1.8.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[tool.uv]
package = false          # no installable package, just scripts
